--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Գիտամարտ</title>
-  <base href="/">
+	<meta charset="utf-8">
+	<title>Գիտամարտ</title>
+	<base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+	<script src="assets/libs/cytoscape.min.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
 </body>
 </html>
